--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -910,10 +910,11 @@ body {
         max-width: 844px;
         line-height: 25px;
         color: $black;
+        font-weight: 450;
     }
     .about_slider_top {
         margin-top: 32px;
-        margin-bottom: 32px;
+        // margin-bottom: 32px;
         /* Слайдер */
         .slick-slider {}
         /* Слайдер запущен */
@@ -926,6 +927,10 @@ body {
         .slick-track {
             display: flex;
             gap: 15px;
+            margin-left: -15px;
+            img {
+                width: 289px;
+            }
         }
         /* Слайд */
         .slick-slide {}
@@ -969,6 +974,7 @@ body {
             display: flex;
             justify-content: flex-start;
             gap: 53px;
+            margin-left: -53px;
         }
         /* Слайд */
         .slick-slide {}
@@ -1001,7 +1007,7 @@ body {
     .subtitle_top,
     .subtitle_bottom {
         margin-top: 32px;
-        margin-bottom: 20px;
+        margin-bottom: 19px;
         // line-height: 48px;
         /* identical to box height */
         color: $black;
