--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1257,6 +1257,11 @@ body {
 .news_prevention_slider .slick-arrow.slick-next {
   display: none;
 }
+.news_slider {
+  width: 1626px;
+  margin: 0 auto;
+}
+
 .page_news_container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1482,7 +1487,8 @@ body {
   border-top: 1px solid #DCDCDC;
   line-height: 25px;
   /* identical to box height */
-  text-decoration-line: underline;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
   color: #055D65;
   display: block;
 }
@@ -2081,7 +2087,81 @@ body {
   font-weight: 500;
 }
 
-.news_slider {
-  width: 1626px;
-  margin: 0 auto;
+.page_information_container .page_information_title {
+  line-height: 82px;
+  color: #000000;
+  margin: 28px 0;
+}
+.page_information_container input {
+  min-width: 1200px;
+  min-height: 71px;
+  background: #ffffff;
+  border: 2px solid #45A6AF;
+  border-radius: 50px;
+  margin-bottom: 32px;
+}
+.page_information_container ::-webkit-input-placeholder {
+  padding-left: 79px;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+  color: #898989;
+}
+.page_information_container .page_information_subtitle {
+  line-height: 48px;
+  color: #000000;
+  margin-bottom: 28px;
+}
+.page_information_container .page_information_block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 28px;
+}
+.page_information_container .page_information_block .page_information_item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.page_information_container .page_information_block .page_information_item h4 {
+  margin: 0 0 8px 0;
+  padding: 0;
+}
+.page_information_container .page_information_block .page_information_item .page_information_list {
+  margin: 0;
+  padding: 0 0 0 8px;
+  list-style-type: none;
+}
+.page_information_container .page_information_block .page_information_item .page_information_list li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 8px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.page_information_container .page_information_block .page_information_item .page_information_list li span {
+  line-height: 25px;
+}
+.page_information_container .page_information_block .page_information_item .page_information_list li span a {
+  color: #000000;
+}
+.page_information_container .page_information_block .page_information_item .telefon {
+  list-style-type: disc;
+  padding-left: 50px;
+  line-height: 25px;
 }/*# sourceMappingURL=style.css.map */
