--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -2067,6 +2067,7 @@ body {
     }
     .page_gosuslugi_subtitle {
         margin: 0 0 28px 0;
+        line-height: 1.5;
     }
     img {
         margin-bottom: 32px;
