--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1552,6 +1552,8 @@ body {
             // align-items: center;
             color: $black;
             display: block;
+            max-width: 728px;
+            padding-right: 20px;
         }
     }
 
